# enclave

./: .gitignore  Cargo.toml  LICENSE  README.md  udeps_crate.sh  udeps_workspace.sh
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml
crates/enclave/: Cargo.toml
crates/enclave-server/: Cargo.toml
crates/enclave-server/src/: lib.rs  main.rs  server.rs
crates/enclave-server/src/api/: attestation.rs  crypto.rs  engine.rs  error.rs  mod.rs  seismic_attestation_agent.rs  tee_service.rs  traits.rs  verifier.rs
crates/enclave-server/src/attestation/: mod.rs  seismic_agent.rs  verifier.rs
crates/enclave-server/src/attestation/agent/: mod.rs  seismic_attestation_agent.rs
crates/enclave-server/src/attestation/verifier/: as_claims.rs  into_original.rs  mod.rs  verifier.rs
crates/enclave-server/src/auth/: auth_future.rs  method_parse.rs  middleware.rs  mod.rs  modify_if.rs
crates/enclave-server/src/coco_aa/: README.md  handlers.rs  mod.rs
crates/enclave-server/src/coco_as/: handlers.rs  into_original.rs  mod.rs
crates/enclave-server/src/genesis/: handlers.rs  mod.rs
crates/enclave-server/src/key_manager/: builder.rs  key_manager.rs  manager.rs  mod.rs
crates/enclave-server/src/server/: boot.rs  engine.rs  internal.rs  into_original.rs  mod.rs  public.rs  server.rs
crates/enclave-server/src/server/boot/: mod.rs
crates/enclave-server/src/signing/: handlers.rs  mod.rs
crates/enclave-server/src/snapshot/: check_operator.rs  compress.rs  file_encrypt.rs  handlers.rs  mod.rs
crates/enclave-server/src/snapshot/contracts/: README.md  UpgradeOperator.sol
crates/enclave-server/src/snapshot/snapshot-copy/: compress.rs  file_encrypt.rs  handlers.rs
crates/enclave-server/src/snapsync/: README.md  check_operator.rs  handlers.rs  mod.rs  reth_supervisor.rs  snapshot.rs
crates/enclave-server/src/snapsync/contracts/: UpgradeOperatorAbi.json
crates/enclave-server/src/tx_io/: handlers.rs
crates/enclave-server/src/utils/: mod.rs  policy_fixture.rs  runners.rs  service.rs  supervisor.rs  supervisorctl.rs  tdx_evidence_helpers.rs  test_utils.rs
crates/enclave-server/tests/: server.rs
crates/enclave-server/tests/e2e/: main.rs  server.rs  snapshot.rs  utils.rs
crates/enclave-server/tests/e2e/snapshot/: mod.rs
crates/enclave-server/tests/integration/: main.rs  server.rs  utils.rs
crates/enclave-server/tests/integration/snapshot/: UpgradeOperator.json  mod.rs
crates/enclave/derive/: Cargo.toml
crates/enclave/derive/src/: lib.rs
crates/enclave/src/: crypto.rs  errors.rs  lib.rs
crates/enclave/src/auth/: auth_client_layer.rs  auth_layer.rs  jwt.rs  jwt_validator.rs  mod.rs
crates/enclave/src/client/: builder.rs  client.rs  http_client.rs  mock.rs  mock_server.rs  mod.rs  rpc.rs
crates/enclave/src/client/internal/: client.rs  mod.rs  rpc.rs
crates/enclave/src/client/operator/: mod.rs
crates/enclave/src/client/public/: client.rs  mod.rs  rpc.rs
crates/enclave/src/key_stuff/: internal.rs  mod.rs  operator.rs  public.rs
crates/enclave/src/request_types/: boot.rs  coco_as.rs  common.rs  keys.rs  mod.rs  nonce.rs  signing.rs  snapshot.rs  snapsync.rs  tx_io.rs
crates/enclave/tests/: lib.rs  mock_server.rs
examples/: as_token.txt  az_tdx_key_att.txt  tdx_encoded_evidence.txt  yocto_20241023223507.txt  yocto_20241025193121.txt
network-upgrades/: backup_reth.sh  deploy.sh  restore_reth.sh
network-upgrades/cli/: .env.example  package-lock.json  package.json  tsconfig.json
network-upgrades/cli/lib/: constants.ts  utils.ts
network-upgrades/cli/src/: app.ts  index.ts
network-upgrades/contracts/: .env.example  .gitignore
network-upgrades/contracts/broadcast/UpgradeOperator.s.sol/5124/: run-1741212600.json
network-upgrades/contracts/script/: UpgradeOperator.s.sol
network-upgrades/contracts/test/: UpgradeOperator.t.sol
src/: lib.rs  main.rs  server.rs
src/aa/: README.md  handlers.rs  structs.rs
src/attester/: README.md  handlers.rs  structs.rs
src/coco_aa/: handlers.rs  structs.rs
src/coco_as/: handlers.rs  mod.rs  policies.rs  structs.rs  tdx_parsing.rs
src/coco_as/examples/: as_token.txt  qncl.conf  tdx_byte_evidence.txt
src/coco_as/examples/policies/: deny.rego  devbox.rego  yocto.rego
src/genesis/: handlers.rs  structs.rs
src/signing/: handlers.rs  structs.rs
src/tx_io/: handlers.rs  mod.rs  structs.rs  utils.rs
src/utils/: crypto_utils.rs  ex_keypair.json  mod.rs  respone_utils.rs  response_utils.rs  runners.rs  tdx_evidence_helpers.rs  test_utils.rs
src/utils_internal/: runners.rs
tee-service/: Cargo.toml
tee-service-api/: Cargo.toml
tee-service-api/src/: client.rs  crypto.rs  errors.rs  lib.rs
tee-service-api/src/client/: http_client.rs  mock_server.rs  mod.rs
tee-service-api/src/request_types/: coco_aa.rs  coco_as.rs  genesis.rs  mod.rs  nonce.rs  response.rs  snapsync.rs  tx_io.rs
tee-service/src/: lib.rs  main.rs  server.rs
tee-service/src/coco_aa/: handlers.rs  mod.rs
tee-service/src/coco_as/: handlers.rs  into_original.rs  mod.rs
tee-service/src/genesis/: handlers.rs  mod.rs
tee-service/src/signing/: handlers.rs  mod.rs
tee-service/src/snapsync/: handlers.rs  mod.rs
tee-service/src/tx_io/: handlers.rs  mod.rs
tee-service/src/utils/: mod.rs  runners.rs  tdx_evidence_helpers.rs  test_utils.rs
tee-service/src/utils_internal/: runners.rs
