[workspace]
resolver = "2"
members = [
    "crates/enclave",
    "crates/enclave-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
repository = "https://github.com/SeismicSystems/TEEService"
homepage = "https://github.com/SeismicSystems/TEEService"
authors = ["Seismic Systems"]
license = "MIT"
readme = "README.md"

# Instead of getting csv-rs from github, use the forked version from Seismic's very own cdrappi
[patch.'https://github.com/openanolis/csv-rs']
csv-rs = { git = "https://github.com/cdrappi/csv-rs.git", branch = "bump-openssl" }


[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
az-tdx-vtpm = "0.7.1"
base64 = "0.22"
bytes = "1.10"
byteorder = "1"
env_logger = "0.11"
hkdf = "0.12"   
hex = "0.4.3"
http-body-util = "0.1"
# TODO: upgrade to 1.4+
hyper = { version = "0.14", features = ["full"] }                                   
kbs-types = "0.7.0"
log = "0.4"
once_cell = "1.20.3"
routerify = "3.0.0"
secp256k1 = {version = "0.29", features = ["rand", "recovery", "std", "serde"]}
sha2 = "0.10"
bincode = "1.3.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking"]}
schnorrkel = { version = "0.11.2" }
scroll = { version = "0.11.0", default-features = false, features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"]}
tokio = { version = "1.40", features = ["full"] }
