[workspace]
resolver = "2"
members = [
    "crates/enclave",
    "crates/enclave-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
repository = "https://github.com/SeismicSystems/TEEService"
homepage = "https://github.com/SeismicSystems/TEEService"
authors = ["Seismic Systems"]
license = "MIT"
readme = "README.md"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
az-tdx-vtpm = "0.7.1"
base64 = "0.22"
bincode = "1.3.3"
byteorder = "1"
bytes = "1.7"
env_logger = "0.11"
hkdf = "0.12"
hex = "0.4.3"
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
kbs-types = "0.7.0"
log = "0.4"
once_cell = "1.20.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
routerify = "3.0.0"
schnorrkel = { version = "0.11.2", features = ["serde"] }
scroll = { version = "0.11.0", default-features = false, features = ["derive"] }
secp256k1 = { version = "0.29", features = ["rand", "recovery", "std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
