[package]
name = "tee_service_api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SeismicSystems/TEEService"

[lib]
name = "tee_service_api"
path = "src/lib.rs"

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
bytes.workspace = true
hkdf.workspace = true
http-body-util.workspace = true
hyper.workspace = true
kbs-types.workspace = true
once_cell.workspace = true
reqwest.workspace = true
schnorrkel.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
tokio.workspace = true
