[package]
name = "tee_service"
version = "0.1.0"
edition = "2021"

[lib]
name = "tee_service"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bytes = "1.7"                  
hyper = { version = "0.14", features = ["full"] }                                   
anyhow = "1.0"
az-tdx-vtpm = "0.7.0"
alloy-rlp = { version = "0.3", default-features = false }
routerify = "3.0.0"
secp256k1 = {version = "0.30", features = ["rand", "recovery", "std", "serde"]}
sha2 = "0.10"
hkdf = "0.12"   
attestation-agent = { git = "https://github.com/confidential-containers/guest-components", features = ["az-tdx-vtpm-attester"] }
attestation-service = { git = "https://github.com/confidential-containers/trustee"}
log = "0.4"
env_logger = "0.11"
once_cell = "1.20.2"
kbs-types = "0.7.0"
serial_test = "3.1.0"
bincode = "1.3.3"
hex = "0.4.3"
byteorder = "1"
scroll = { version = "0.11.0", default-features = false, features = ["derive"]}