[package]
name = "tee_service"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SeismicSystems/TEEService"

[lib]
name = "tee_service"
path = "src/lib.rs"

[dependencies]

attestation-agent = { git = "https://github.com/confidential-containers/guest-components", features = ["az-tdx-vtpm-attester"] }
attestation-service = { git = "https://github.com/confidential-containers/trustee"}
tee_service_api = { path = "../tee-service-api" }

aes-gcm = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
az-tdx-vtpm = { workspace = true }
routerify = { workspace = true }
secp256k1 = { workspace = true, features = ["rand", "recovery", "std", "serde"] }
sha2 = { workspace = true }
hkdf = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
once_cell = { workspace = true }
kbs-types = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
byteorder = { workspace = true }
scroll = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

serial_test = "3.1.0"


[package.metadata.cargo-udeps]
ignore = ["serial_test"]
