[package]
name = "seismic-enclave-server"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description = "Seismic enclave backend"

[lib]
name = "seismic_enclave_server"
path = "src/lib.rs"

[features]
default = []         # empty default, no supervisorctl, as yocto_builds do not include it
supervisorctl = []

[dependencies]
seismic-enclave.workspace = true

# attestation-service depends on attestation-agent, ensure versions are compatible when updating
attestation-service = { git = "https://github.com/confidential-containers/trustee", features = ["all-verifier"], rev="4a58881"}
time = { version = "0.3.40", features = ["std"] } # necessary for attestation-service at rev="4a58881"
attestation-agent = { git = "https://github.com/confidential-containers/guest-components", features = ["az-tdx-vtpm-attester"], rev="2823b8c"}
verifier = { git = "https://github.com/confidential-containers/trustee", rev = "4a58881", package = "verifier" }

aes-gcm.workspace = true
zeroize.workspace = true
anyhow.workspace = true
az-tdx-vtpm.workspace = true
base64.workspace = true
hex.workspace = true
hkdf.workspace = true
jsonrpsee.workspace = true
kbs-types.workspace = true
log.workspace = true
scroll.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
schnorrkel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
serial_test = "3.2.0"

[package.metadata.cargo-udeps]
ignore = ["serial_test"]
