[package]
name = "seismic-enclave-server"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description = "Seismic enclave backend"

[dependencies]
seismic-enclave.workspace = true
# attestation-service depends on attestation-agent, ensure versions are compatible when updating
attestation-agent = { git = "https://github.com/confidential-containers/guest-components", rev="4fbeded", default-features = false}
aa_crypto = { git = "https://github.com/confidential-containers/guest-components", rev="4fbeded", package = "crypto", default-features = false}
attestation-service = { git = "https://github.com/confidential-containers/trustee", rev="b81a0de", default-features = false}
verifier = { git = "https://github.com/confidential-containers/trustee", rev = "b81a0de", package = "verifier", default-features = false}
time = { version = "0.3.40", features = ["std"] } # necessary for attestation-service at rev="b81a0de"
az-tdx-vtpm = {workspace = true, optional = true}

aes-gcm.workspace = true
zeroize.workspace = true
anyhow.workspace = true
base64.workspace = true
hkdf.workspace = true
jsonrpsee.workspace = true
kbs-types.workspace = true
log.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
schnorrkel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

hex = {workspace = true, optional = true }
scroll = { workspace = true, optional = true }
serde = {workspace = true, optional = true }

clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
serial_test = "3.2.0"


[features]
default = ["az-tdx-vtpm-attester"]
az-tdx-vtpm-attester = [
    "attestation-agent/az-tdx-vtpm-attester", 
    "verifier/az-tdx-vtpm-verifier", 
    "verifier/az-snp-vtpm-verifier", 
    "az-tdx-vtpm",
    "hex",
    "scroll",
    "serde",
]


[package.metadata.cargo-udeps]
ignore = ["serial_test"]
