[package]
name = "seismic-enclave"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "seismic_enclave"
path = "src/lib.rs"

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
bytes.workspace = true
hkdf.workspace = true
http-body-util.workspace = true
hyper.workspace = true
kbs-types.workspace = true
once_cell.workspace = true
reqwest.workspace = true
schnorrkel.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
tokio.workspace = true
