[package]
name = "seismic-enclave"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description = "Tools for building and interfacing with the Seismic enclave"

[lib]
name = "seismic_enclave"
path = "src/lib.rs"

[dependencies]
seismic-enclave-derive.workspace = true
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber.workspace = true

aes-gcm.workspace = true
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
bytes.workspace = true
hkdf.workspace = true
jsonrpsee.workspace = true
kbs-types.workspace = true
once_cell.workspace = true
rand.workspace = true
reqwest.workspace = true
schnorrkel.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
base64.workspace = true

tower.workspace = true
http.workspace = true
jsonrpsee-http-client.workspace = true
pin-project.workspace = true
jsonwebtoken.workspace = true
hex.workspace = true
